--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "rg-admin-api",
+  "name": "bookshelf-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+  
+    "build": "npm run build"
+ 
+
   },
   "author": "",
   "license": "ISC",
