--- a/backend/package.json
+++ b/backend/package.json
@@ -7,27 +7,25 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-  
     "build": "npm run build"
- 
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
-    "dotenv": "^16.3.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.6.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.7.5"
   },
   "engines": {
-
     "node": ">=14 <18.17.1"
   }
 }
